--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
@@ -624,6 +624,15 @@
                                         @Html.TextBoxFor(model => model.Setting.QuickNewCaseLinkUrl, new { maxlength = "100", style = "width: 400px;" })
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td style="width:100px">
+                                        @Translation.Get("Förvald ärendemall", Enums.TranslationSource.TextTranslation)
+                                    </td>
+                                    <td>
+                                        @Html.DropDownListFor(model => model.Setting.DefaultCaseTemplateId, Model.CaseSolutionList, "", new { })
+                                    </td>
+                                    
+                                </tr>
                             </table>
                         </div>
                     </div>
@@ -726,4 +735,5 @@
 
         }
     });
+
 </script>
