[FIX] #59483 DH5: Formatering av text i Driftlogg

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
@@ -18,7 +18,7 @@
                                 @operationLog.CustomerName | Skapad @operationLog.CreatedDate.ToFormattedDateTime() Uppdaterad @operationLog.ChangedDate.ToFormattedDateTime()
                             </div>
                             <div class="captionrow">@operationLog.Object.Name</div>
-                            <div class="textrow">@Html.Raw(operationLog.LogText.Replace(Environment.NewLine, "<br />"))</div>
+                            <div class="textrow">@Html.Raw(operationLog.LogText.Replace(Environment.NewLine, "<br />")) <br /> @Html.Raw(operationLog.LogAction.Replace(Environment.NewLine, "<br />"))</div>
                         </div>
                     }
                 }            
