--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1407,9 +1407,14 @@ table th.thpointer {
         border-bottom: 1px dotted #ccc;
     }
 
-        .box-post div.textrow span {
-            line-height: 100%;
-        }
+    .box-post div.textrow span {
+        line-height: 100%;
+    }
+
+    .box-post div.textrow a {
+        padding: 5px 0 10px 0;
+        text-decoration:underline;
+    }
 /*.box-post div.textrow ul
 {
 	margin-top:0;
