--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/_Input.cshtml
@@ -66,7 +66,7 @@
                         <div class="container">
                             <h4>@Model.ComputerUserCategoryModel.Name details</h4>
                             <div class="row">
-                                <iframe id="extendedComputerUser" style="width:500px; height:280px" frameborder="0" src="@Model.ComputerUserCategoryModel.ExtendedCasePath"></iframe>
+                                <iframe id="extendedComputerUser" style="width:500px; height:280px; margin-left:20px" frameborder="0" src="@Model.ComputerUserCategoryModel.ExtendedCasePath"></iframe>
                             </div>
                         </div>
                     }
